change in the field type because if we didn't have to synchronize the same options/suggestions, now we can add any word to the field and then only in admin lang add the respective one to our options/suggestions.
